--- a/src/lab3.ipynb
+++ b/src/lab3.ipynb
@@ -61,16 +61,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "web-NotreDame.txt\n",
-    "\n",
-    "Nodes\t325729\n",
-    "\n",
-    "Edges\t1497134\n",
-    "\n",
-    "Number of triangles\t8910005\n",
-    "\n",
-    "\n",
-    "\n",
     "Social circles: Facebook\n",
     "\n",
     "Nodes\t4039\n",
@@ -398,7 +388,7 @@
     "\n",
     "4.*Does the algorithm support edge deletions? If not, what modification would it need? Explain.*\n",
     "\n",
-    "Although TRIÈST-BASE and TRIÈST-IMPR do not support edge deletions, the same paper where they are presented describes TRIÈST-FD, a fully dynamic version. TRIÈST-FD builds upon the concept of Random Pairing (RP) by keeping track of the number of edges deleted from the sample set due to deletion in the stream and the overall number of deletions. This information then drives the insertion of a new edge in the sample set and the formula for the estimation of the number of triangles."
+    "TRIÈST-BASE and TRIÈST-IMPR do not support edge deletions. TRIÈST Fully-Dynamic can support edge deletions. To address deletions, the algorithms would need to accommodate a dynamic stream as input. This stream would consist of elements representing edges and their respective operations (insertion or deletion). Additionally, two counters keeping track of unbalanced deletions and insertions would be necessary. These counters would be taken into account before applying reservoir sampling to the new input. If there are imbalances, the probability of sampling would be adjusted based on these counters."
    ]
   }
  ],
