--- a/src/lab3.ipynb
+++ b/src/lab3.ipynb
@@ -388,7 +388,7 @@
     "\n",
     "4.*Does the algorithm support edge deletions? If not, what modification would it need? Explain.*\n",
     "\n",
-    "TRIÈST-BASE and TRIÈST-IMPR do not support edge deletions. TRIÈST Fully-Dynamic can support edge deletions. To address deletions, the algorithms would need to accommodate a dynamic stream as input. This stream would consist of elements representing edges and their respective operations (insertion or deletion). Additionally, two counters keeping track of unbalanced deletions and insertions would be necessary. These counters would be taken into account before applying reservoir sampling to the new input. If there are imbalances, the probability of sampling would be adjusted based on these counters."
+    "TRIÈST-BASE and TRIÈST-IMPR do not support edge deletions. TRIÈST Fully-Dynamic can support edge deletions. To address deletions, the algorithms would need to accommodate a dynamic stream as input. This stream would consist of elements representing edges and their respective operations (insertion or deletion). Additionally, two counters ($d_i$ and $d_o$)keeping track of unbalanced deletions in the sample ($d_i$) and out of it ($d_o$) would be necessary. These counters would be taken into account before applying reservoir sampling to the new input. If there are imbalances, the probability of sampling would be adjusted based on these counters."
    ]
   }
  ],
